--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "devDependencies": {
     "browser-sync": "^2.27.10",
-    "gulp": "^4.0.2",
-    "gulp-sass": "^4.0.2"
+    "gulp": "^4.0.2"
   }
 }
